# rymysql

./: README.md  setup.cfg
src/: setup.cfg
src/pymysql/: __init__.py  commands.py  connection.py  credentials.py  structs.py
src/rymysql/: commands.py  credentials.py
