[metadata]
name = pymysql
version = 0.1.2
description = mysql.connector wrapper
project_urls =
    Documentation = https://github.com/rrickgauer/pymysql
    Source Code = https://github.com/rrickgauer/pymysql
    Issue Tracker = https://github.com/rrickgauer/pymysql/issues
author = Ryan Rickgauer
author_email = rrickgauer1@gmail.com

[options]
packages = find:
package_dir = = src
install_requires =
    mysql-connector-python

[options.packages.find]
where=src