[metadata]
name = rymysql
version = 0.2.0
description = mysql.connector wrapper
project_urls =
    Documentation = https://github.com/rrickgauer/rymysql
    Source Code = https://github.com/rrickgauer/rymysql
    Issue Tracker = https://github.com/rrickgauer/rymysql/issues
author = Ryan Rickgauer
author_email = rrickgauer1@gmail.com

[options]
packages = find:
package_dir = = src
install_requires =
    mysql-connector-python

[options.packages.find]
where=src